Correction des couleurs dans 'style.css' afin d’obtenir un contraste d'accessibilité suffisant

--- a/style.css
+++ b/style.css
@@ -738,7 +738,7 @@ h4 {
 }
 
 .white {
-  color: #ffffff !important;
+  color: #ffffff99 !important;
 }
 
 .portfolio-thumb {
@@ -777,17 +777,17 @@ h4 {
 }
 
 .tc-white {
-  color: #f3976c !important;
+  color: #ffffff99 !important;
 }
 
 .btn-atomic-tangerine {
   background: #f3976c;
-  color: #ffffff !important;
+  color: #ffffff99 !important;
 }
 
 .btn-atomic-tangerine:hover {
   background: #c27956 !important;
-  color: #ffffff !important;
+  color: #ffffff99 !important;
 }
 
 .ltc-white {
